Add a well-defined API contract, integration tests, update dependencies, update image, etc.
